fix(tabs): group alignment propagating to nested groups (#19037)
The selector that applies the alignment to the tab header was too broad which meant that it was applying to any nested tab groups.

Fixes #19035.

--- a/src/material-experimental/mdc-tabs/_tabs-common.scss
+++ b/src/material-experimental/mdc-tabs/_tabs-common.scss
@@ -144,16 +144,18 @@ $mat-tab-animation-duration: 500ms !default;
 }
 
 // Structural styles for the element that wraps the paginated header items.
-@mixin mat-mdc-paginated-tab-header-item-wrapper {
+@mixin mat-mdc-paginated-tab-header-item-wrapper($parent) {
   display: flex;
   flex: 1 0 auto;
 
+  // We need to set the parent here explicitly, in order to prevent the alignment
+  // from any parent tab groups from propagating down to the children when nesting.
   // Note that these are used as inputs so they shouldn't be changed to `mat-mdc-`.
-  [mat-align-tabs='center'] & {
+  [mat-align-tabs='center'] > #{$parent} & {
     justify-content: center;
   }
 
-  [mat-align-tabs='end'] & {
+  [mat-align-tabs='end'] > #{$parent} & {
     justify-content: flex-end;
   }
 }
