--- a/src/material-experimental/mdc-tabs/tab-header.scss
+++ b/src/material-experimental/mdc-tabs/tab-header.scss
@@ -17,5 +17,5 @@
 }
 
 .mat-mdc-tab-labels {
-  @include mat-mdc-paginated-tab-header-item-wrapper;
+  @include mat-mdc-paginated-tab-header-item-wrapper('.mat-mdc-tab-header');
 }
