--- a/src/material-experimental/mdc-tabs/tab-nav-bar/tab-nav-bar.scss
+++ b/src/material-experimental/mdc-tabs/tab-nav-bar/tab-nav-bar.scss
@@ -6,7 +6,7 @@
 @include mat-mdc-paginated-tab-header;
 
 .mat-mdc-tab-links {
-  @include mat-mdc-paginated-tab-header-item-wrapper;
+  @include mat-mdc-paginated-tab-header-item-wrapper('.mat-mdc-tab-link-container');
 }
 
 .mat-mdc-tab-link-container {
