--- a/src/material/tabs/_tabs-common.scss
+++ b/src/material/tabs/_tabs-common.scss
@@ -138,14 +138,16 @@ $mat-tab-animation-duration: 500ms !default;
 }
 
 // Structural styles for the element that wraps the paginated header items.
-@mixin paginated-tab-header-item-wrapper {
+@mixin paginated-tab-header-item-wrapper($parent) {
   display: flex;
 
-  [mat-align-tabs='center'] & {
+  // We need to set the parent here explicitly, in order to prevent the alignment
+  // from any parent tab groups from propagating down to the children when nesting.
+  [mat-align-tabs='center'] > #{$parent} & {
     justify-content: center;
   }
 
-  [mat-align-tabs='end'] & {
+  [mat-align-tabs='end'] > #{$parent} & {
     justify-content: flex-end;
   }
 }
