--- a/src/material/tabs/tab-nav-bar/tab-nav-bar.scss
+++ b/src/material/tabs/tab-nav-bar/tab-nav-bar.scss
@@ -4,7 +4,7 @@
 @include paginated-tab-header;
 
 .mat-tab-links {
-  @include paginated-tab-header-item-wrapper;
+  @include paginated-tab-header-item-wrapper('.mat-tab-link-container');
 }
 
 .mat-ink-bar {
